packages/frontend/components/layout/md-editor/highlightjs.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.markdown-body {
    @apply text-muted-foreground text-base;
}

.markdown-body h1:first-child {
    @apply mt-0;
}

.markdown-body blockquote,
.markdown-body details,
.markdown-body dl,
.markdown-body ol,
.markdown-body p,
.markdown-body code,
.markdown-body pre,
.markdown-body table,
.markdown-body ul {
    @apply mt-0 mb-4;
}

.markdown-body li,
.markdown-body p {
    @apply p-0 leading-normal text-muted-foreground;
}

.markdown-body h1,
.markdown-body h2 {
    @apply pt-2.5 pb-1 border-b border-extra-muted-foreground;
}

.markdown-body h1,
.markdown-body h2,
.markdown-body h3 {
    @apply font-bold;
}

.markdown-body h1,
.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6,
.markdown-body li,
.markdown-body p {
    word-wrap: break-word;
    overflow-wrap: anywhere !important;
}

.markdown-body ul,
.markdown-body ol {
    @apply pl-10;
}

.markdown-body ul li {
    @apply list-disc;
}

.markdown-body ol li {
    @apply list-decimal;
}

.markdown-body h1 {
    @apply mb-5 text-[2rem];
}

.markdown-body h2 {
    @apply text-[1.5rem] mb-4;
}

.markdown-body h3 {
    @apply text-[1.17rem];
}


.markdown-body blockquote {
    @apply ml-6 px-4 border-l-[0.25rem] border-shallower-background;
}

.markdown-body blockquote blockquote {
    @apply ml-4 px-4 border-l-[0.25rem] border-shallower-background;
}

.markdown-body a {
    @apply text-link-foreground cursor-pointer transition-[filter] w-auto h-auto box-border inline-block;
}

.markdown-body a:focus-visible,
.markdown-body a:hover {
    /* text-decoration: underline; */
    @apply text-link-hover-foreground;
}

.markdown-body a:focus-visible img,
.markdown-body a:hover img {
    @apply brightness-110;
}

.markdown-body img {
    @apply max-w-full w-auto h-auto inline-block;
}

html:not(.dark).markdown-body img[src$='#gh-dark-mode-only'] {
    display: none;
}

html:is(.dark).markdown-body img[src$='#gh-light-mode-only'] {
    display: none;
}

.markdown-body pre {
    @apply mt-4 py-4 px-5 w-full inline-block bg-shallow-background dark:bg-shallow-background/70 rounded overflow-x-auto whitespace-break-spaces;
}

.markdown-body pre code {
    @apply p-0 rounded-none text-[90%] bg-transparent;
}

.markdown-body code {
    @apply max-w-full py-0.5 px-2 text-[90%] rounded bg-shallow-background font-mono;
}

.markdown-body hr {
    @apply my-5 text-foreground;
}

.markdown-body table {
    @apply block w-fit max-w-full overflow-auto border-separate border-spacing-0 leading-normal border-[0.1rem] border-shallow-background rounded;
}

.markdown-body table th {
    @apply font-semibold text-base;
}

.markdown-body table td,
.markdown-body table th {
    @apply py-2 px-3.5;
}

.markdown-body table tr:nth-child(2n) {
    @apply bg-zinc-100 dark:bg-zinc-950/25;
}

.markdown-body table td:not(:last-of-type),
.markdown-body table th:not(:last-of-type) {
    @apply border-r-[0.1rem] border-shallow-background;
}

.markdown-body table tr:not(:last-of-type) td,
.markdown-body table th {
    @apply border-b-[0.1rem] border-shallow-background;
}

.markdown-body kbd {
    @apply bg-shallow-background rounded text-foreground px-2 pt-1 pb-0.5 leading-none text-sm;
}

.markdown-body details {
    @apply border-[0.2rem] border-shallow-background rounded p-2 pb-0 open:pb-2;
}

.markdown-body details>summary {
    @apply font-bold bg-shallow-background m-[-0.5rem] mb-0 py-2 px-3 cursor-pointer rounded-md hover:bg-shallow-background/75;
}

.markdown-body details[open]>summary {
    @apply mb-2 rounded-bl-none rounded-br-none;
}

.markdown-body details[open]> :last-child:not(summary) {
    @apply !mb-0;
}

.markdown-body> :last-child {
    @apply !mb-0;
}

.markdown-body iframe,
.markdown-body video {
    @apply aspect-video w-full xl:w-[850px] max-w-full h-auto;
}



/* CODE BLOCK THEME */

pre code.hljs {
    display: block;
    overflow-x: auto;
    padding: 1em
}

code.hljs {
    padding: 3px 5px
}

/*

  Atom One Light by Daniel Gamage
  Original One Light Syntax theme from https://github.com/atom/one-light-syntax

  base:    #fafafa
  mono-1:  #383a42
  mono-2:  #686b77
  mono-3:  #a0a1a7
  hue-1:   #0184bb
  hue-2:   #4078f2
  hue-3:   #a626a4
  hue-4:   #50a14f
  hue-5:   #e45649
  hue-5-2: #c91243
  hue-6:   #986801
  hue-6-2: #c18401

  */
.hljs {
    color: #383a42;
    background: #FBFCFF
}

.hljs-comment,
.hljs-quote {
    color: #a0a1a7;
    font-style: italic
}

.hljs-doctag,
.hljs-keyword,
.hljs-formula {
    color: #a626a4
}

.hljs-section,
.hljs-name,
.hljs-selector-tag,
.hljs-deletion,
.hljs-subst {
    color: #e45649
}

.hljs-literal {
    color: #0184bb
}

.hljs-string,
.hljs-regexp,
.hljs-addition,
.hljs-attribute,
.hljs-meta .hljs-string {
    color: #50a14f
}

.hljs-attr,
.hljs-variable,
.hljs-template-variable,
.hljs-type,
.hljs-selector-class,
.hljs-selector-attr,
.hljs-selector-pseudo,
.hljs-number {
    color: #986801
}

.hljs-symbol,
.hljs-bullet,
.hljs-link,
.hljs-meta,
.hljs-selector-id,
.hljs-title {
    color: #4078f2
}

.hljs-built_in,
.hljs-title.class_,
.hljs-class .hljs-title {
    color: #c18401
}

.hljs-emphasis {
    font-style: italic
}

.hljs-strong {
    font-weight: bold
}

.hljs-link {
    text-decoration: underline
}


/* * DARK THEME */

.dark pre code.hljs {
    display: block;
    overflow-x: auto;
    padding: 1em
}

.dark code.hljs {
    padding: 3px 5px
}

/*

  Atom One Dark by Daniel Gamage
  Original One Dark Syntax theme from https://github.com/atom/one-dark-syntax

  base:    #282c34
  mono-1:  #abb2bf
  mono-2:  #818896
  mono-3:  #5c6370
  hue-1:   #56b6c2
  hue-2:   #61aeee
  hue-3:   #c678dd
  hue-4:   #98c379
  hue-5:   #e06c75
  hue-5-2: #be5046
  hue-6:   #d19a66
  hue-6-2: #e6c07b

  */
.dark .hljs {
    color: #abb2bf;
    background: #282c34
}

.dark .hljs-comment,
.dark .hljs-quote {
    color: #5c6370;
    font-style: italic
}

.dark .hljs-doctag,
.dark .hljs-keyword,
.dark .hljs-formula {
    color: #c678dd
}

.dark .hljs-section,
.dark .hljs-name,
.dark .hljs-selector-tag,
.dark .hljs-deletion,
.dark .hljs-subst {
    color: #e06c75
}

.dark .hljs-literal {
    color: #56b6c2
}

.dark .hljs-string,
.dark .hljs-regexp,
.dark .hljs-addition,
.dark .hljs-attribute,
.dark .hljs-meta .hljs-string {
    color: #98c379
}

.dark .hljs-attr,
.dark .hljs-variable,
.dark .hljs-template-variable,
.dark .hljs-type,
.dark .hljs-selector-class,
.dark .hljs-selector-attr,
.dark .hljs-selector-pseudo,
.dark .hljs-number {
    color: #d19a66
}

.dark .hljs-symbol,
.dark .hljs-bullet,
.dark .hljs-link,
.dark .hljs-meta,
.dark .hljs-selector-id,
.dark .hljs-title {
    color: #61aeee
}

.dark .hljs-built_in,
.dark .hljs-title.class_,
.dark .hljs-class .hljs-title {
    color: #e6c07b
}

.dark .hljs-emphasis {
    font-style: italic
}

.dark .hljs-strong {
    font-weight: bold
}

.dark .hljs-link {
    text-decoration: underline;
}

